added correlation graphs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+analysis/ryskin_et_al/1_incremental/main/data/PragTrain3_adjnoun_for_GLMM_timesummLongForm.txt
+data/PragTrain3_adjnoun_for_GLMM_timesummLongForm.txt
 *~
 writing/redundant_reference.pdf
 ./writing/extrabibs.bib
